Implementing the correct battle distribution

--- a/index.html
+++ b/index.html
@@ -22,58 +22,58 @@
       <br>
       Infantry:  <br>infantryAtt: <input type="text" name="inf_infantryAtt" value="1"/> <br> 
                 infantryDef: <input type="text" name="inf_infantryDef" value="1"/> <br>
-                archersAtt: <input type="text" name="inf_archersAtt" value="2"/> <br>
-                archersDef: <input type="text" name="inf_archersDef" value="2"/> <br>
-                cavalryAtt: <input type="text" name="inf_cavalryAtt" value="0.5"/> <br>
-                cavalryDef: <input type="text" name="inf_cavalryDef" value="0.5"/> <br>
-                mageAtt: <input type="text" name="inf_mageAtt" value="0.67"/> <br>
-                mageDef: <input type="text" name="inf_mageDef" value="0.67"/> <br>
-                sealsAtt: <input type="text" name="inf_sealsAtt" value="2"/> <br>
-                sealsDef: <input type="text" name="inf_sealsDef" value="2"/> <br>
+                archersAtt: <input type="text" name="inf_archersAtt" value="0.5"/> <br>
+                archersDef: <input type="text" name="inf_archersDef" value="0.5"/> <br>
+                cavalryAtt: <input type="text" name="inf_cavalryAtt" value="2"/> <br>
+                cavalryDef: <input type="text" name="inf_cavalryDef" value="2"/> <br>
+                mageAtt: <input type="text" name="inf_mageAtt" value="1.33"/> <br>
+                mageDef: <input type="text" name="inf_mageDef" value="1.33"/> <br>
+                sealsAtt: <input type="text" name="inf_sealsAtt" value="0.5"/> <br>
+                sealsDef: <input type="text" name="inf_sealsDef" value="0.5"/> <br>
       <br>
-      Archers:   <br>infantryAtt: <input type="text" name="arch_infantryAtt" value="0.5"/> <br> 
-                infantryAtt: <input type="text" name="arch_infantryAtt" value="0.5"/> <br>
+      Archers:   <br>infantryAtt: <input type="text" name="arch_infantryAtt" value="2"/> <br> 
+                infantryDef: <input type="text" name="arch_infantryDef" value="2"/> <br>
                 archersAtt: <input type="text" name="arch_archersAtt" value="1"/> <br>
                 archersDef: <input type="text" name="arch_archersDef" value="1"/> <br>
-                cavalryAtt: <input type="text" name="arch_cavalryAtt" value="2"/> <br>
-                cavalryDef: <input type="text" name="arch_cavalryDef" value="2"/> <br>
-                mageAtt: <input type="text" name="arch_mageAtt" value="0.67"/> <br>
-                mageDef: <input type="text" name="arch_mageDef" value="0.67"/> <br>
-                sealsAtt: <input type="text" name="arch_sealsAtt" value="2"/> <br>
-                sealsDef: <input type="text" name="arch_sealsDef" value="2"/> <br>
+                cavalryAtt: <input type="text" name="arch_cavalryAtt" value="0.5"/> <br>
+                cavalryDef: <input type="text" name="arch_cavalryDef" value="0.5"/> <br>
+                mageAtt: <input type="text" name="arch_mageAtt" value="0.5"/> <br>
+                mageDef: <input type="text" name="arch_mageDef" value="0.5"/> <br>
+                sealsAtt: <input type="text" name="arch_sealsAtt" value="0.5"/> <br>
+                sealsDef: <input type="text" name="arch_sealsDef" value="0.5"/> <br>
       <br>
-      Cavalry:   <br>infantryAtt: <input type="text" name="cav_infantryAtt" value="2"/>  <br>
-                infantryAtt: <input type="text" name="cav_infantryAtt" value="2"/> <br>
-                archersAtt: <input type="text" name="cav_archersAtt" value="0.5"/> <br>
-                archersDef: <input type="text" name="cav_archersDef" value="0.5"/> <br>
+      Cavalry:   <br>infantryAtt: <input type="text" name="cav_infantryAtt" value="0.5"/>  <br>
+                infantryDef: <input type="text" name="cav_infantryDef" value="0.5"/> <br>
+                archersAtt: <input type="text" name="cav_archersAtt" value="2"/> <br>
+                archersDef: <input type="text" name="cav_archersDef" value="2"/> <br>
                 cavalryAtt: <input type="text" name="cav_cavalryAtt" value="1"/> <br>
                 cavalryDef: <input type="text" name="cav_cavalryDef" value="1"/> <br>
-                mageAtt: <input type="text" name="cav_mageAtt" value="0.67"/> <br>
-                mageDef: <input type="text" name="cav_mageDef" value="0.67"/> <br>
-                sealsAtt: <input type="text" name="cav_sealsAtt" value="2"/> <br>
-                sealsDef: <input type="text" name="cav_sealsDef" value="2"/> <br>
+                mageAtt: <input type="text" name="cav_mageAtt" value="1"/> <br>
+                mageDef: <input type="text" name="cav_mageDef" value="1"/> <br>
+                sealsAtt: <input type="text" name="cav_sealsAtt" value="0.5"/> <br>
+                sealsDef: <input type="text" name="cav_sealsDef" value="0.5"/> <br>
       <br>
-      Mage:      <br>infantryAtt: <input type="text" name="mage_infantryAtt" value="1.5"/>  <br>
-                infantryAtt: <input type="text" name="mage_infantryAtt" value="1.5"/> <br>
-                archersAtt: <input type="text" name="mage_archersAtt" value="1.5"/> <br>
-                archersDef: <input type="text" name="mage_archersDef" value="1.5"/> <br>
-                cavalryAtt: <input type="text" name="mage_cavalryAtt" value="1.5"/> <br>
-                cavalryDef: <input type="text" name="mage_cavalryDef" value="1.5"/> <br>
+      Mage:      <br>infantryAtt: <input type="text" name="mage_infantryAtt" value="0.75"/>  <br>
+                infantryDef: <input type="text" name="mage_infantryDef" value="0.75"/> <br>
+                archersAtt: <input type="text" name="mage_archersAtt" value="0.75"/> <br>
+                archersDef: <input type="text" name="mage_archersDef" value="0.75"/> <br>
+                cavalryAtt: <input type="text" name="mage_cavalryAtt" value="0.75"/> <br>
+                cavalryDef: <input type="text" name="mage_cavalryDef" value="0.75"/> <br>
                 mageAtt: <input type="text" name="mage_mageAtt" value="1"/> <br>
                 mageDef: <input type="text" name="mage_mageDef" value="1"/> <br>
-                sealsAtt: <input type="text" name="mage_sealsAtt" value="2"/> <br>
-                sealsDef: <input type="text" name="mage_sealsDef" value="2"/> <br>
+                sealsAtt: <input type="text" name="mage_sealsAtt" value="1.5"/> <br>
+                sealsDef: <input type="text" name="mage_sealsDef" value="1.5"/> <br>
       <br>
-      Seals:     <br>infantryAtt: <input type="text" name="seals_infantryAtt" value="2"/> <br> 
-                infantryAtt: <input type="text" name="seals_infantryAtt" value="2"/> <br>
-                archersAtt: <input type="text" name="seals_archersAtt" value="2"/> <br>
-                archersDef: <input type="text" name="seals_archersDef" value="2"/> <br>
-                cavalryAtt: <input type="text" name="seals_cavalryAtt" value="2"/> <br>
-                cavalryDef: <input type="text" name="seals_cavalryDef" value="2"/> <br>
-                mageAtt: <input type="text" name="seals_mageAtt" value="0.5"/> <br>
-                mageDef: <input type="text" name="seals_mageDef" value="0..5"/> <br>
-                sealsAtt: <input type="text" name="seals_sealsAtt" value="1"/> <br>
-                sealsDef: <input type="text" name="seals_sealsDef" value="1"/> <br>
+      Seals:     <br>infantryAtt: <input type="text" name="seals_infantryAtt" value="0"/> <br> 
+                infantryDef: <input type="text" name="seals_infantryDef" value="0"/> <br>
+                archersAtt: <input type="text" name="seals_archersAtt" value="0"/> <br>
+                archersDef: <input type="text" name="seals_archersDef" value="0"/> <br>
+                cavalryAtt: <input type="text" name="seals_cavalryAtt" value="0"/> <br>
+                cavalryDef: <input type="text" name="seals_cavalryDef" value="0"/> <br>
+                mageAtt: <input type="text" name="seals_mageAtt" value="0"/> <br>
+                mageDef: <input type="text" name="seals_mageDef" value="0"/> <br>
+                sealsAtt: <input type="text" name="seals_sealsAtt" value="0"/> <br>
+                sealsDef: <input type="text" name="seals_sealsDef" value="0"/> <br>
       <br>
       <text style="color:brown">Might Coefficient</text>
       <br>
