Added css and background

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <html>
   <head>
     <title>Battle Simulator</title>
+    <LINK href="stylesheet.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="sim.js"></script>
+
   </head>
-  <body bgcolor=white>
+  <body bgcolor="transparent">
   	<div id="div1" style="color:blue">Sky Wars Battle simulator</div>
     <br>
-    <form id="globalvars">
+    <form id="globalvars" bgcolor="transparent">
       <text style="color:brown">Defender boosts: </text><br>
       Attack Boost: <input type="text" name="defBoostAtt" value="1"/> Defence Boost: <input type="text" name="defBoostDef" value="1"/><br>
       <text style="color:brown" >Attacker boosts: </text><br>
