--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
     <title>Battle Simulator</title>
     <LINK href="stylesheet.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="sim.js"></script>
+    <script type="text/javascript" src="Logger.js"></script>
 
   </head>
-  <body bgcolor="transparent">
+  <body bgcolor="transparent" style="color:white">
+    <div id="wrapper">
   	<div id="div1" style="color:blue">Sky Wars Battle simulator</div>
     <br>
+    <button id="goToBattle" style="background:red">FIGHT!</button><br><br>
     <form id="globalvars" bgcolor="transparent">
       <text style="color:brown">Defender boosts: </text><br>
       Attack Boost: <input type="text" name="defBoostAtt" value="1"/> Defence Boost: <input type="text" name="defBoostDef" value="1"/><br>
@@ -181,8 +184,8 @@
 
   		<!-- Tiers Types: <input type="text" name="t1" value="t1"/><input type="text" name="t2" value="t2"/><input type="text" name="t3" value="t3"/><input type="text" name="t4" value="t4"/><input type="text" name="t5" value="t5"/><br><br><br> -->
 	</form>
-  <button id="goToBattle" style="background:red">GO FIGHT!</button><br>
-  <text style="color:brown"> --------------------------- Battle Report: ------------------------------------</text>
-	<div id="log"></div>	
+  
+	<div id="log"></div>
+  </div>	
   </body>
 </html>
